  as 'edit', 'new', 'log' instead of 0, 1, 2, respectively.
* Compatibility fix for PHP 5.0.x.
* Add rctype parameter to list=recentchanges that filters by type
* Add apprtype and apprlevel parameters to filter list=allpages by protection types and levels
* Add apdir parameter to enable listing all pages from Z to A

=== Languages updated in 1.12 ===

* Amharic (am) (new)
* Aragonese (an)
* Arabic (ar)
* Mapudungun (arn) (new)
* Asturian (ast)
* Samogitian (bat-smg)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bulgarian (bg)
* Bislama (bi) (new)
* Bengali (bn)
* Bishnupriya Manipuri (bpy)
* Breton (br)
* Catalan (ca)
* Czech (cs)
* Cassubian (csb)
* Welsh (cy)
* Danish (da)
* German (de)
* Lower Sorbian (dsb) (new)
* Ewe (ee) (new)
* Greek (el)
* Spanish (es)
* Extremaduran (ext)
* Finnish (fi)
* Persian (fa)
* Võro (fiu-vro)
* Faroese (fo)
* French (fr)
* Cajun French (frc)
* Franco-Provençal (frp)
* Frisian (fy)
* Irish (ga)
* Gön-gnŷ (gan) (new)
* Galician (gl)
* Ancient Greek (grc) (new)
* Hakka (hak)
* Hebrew (he)
* Croatian (hr)
* Upper Sorbian (hsb)
* Armenian (hy)
* Indonesian (id)
* Ingush (inh) (new)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Kazakh (kk)
* Korean (ko)
* Kurdish (Latin) (ku-latn)
* Latin (la)
* Limbugian (li)
* Lozi (loz) (new)
* Lingala (ln)
* Lithuanian (lt)
* Malay (ms)
* Nahuatl (nah)
* Min-nan (nan)
* Low Saxon (nds)
* Dutch Low Saxon (nds-nl)
* Dutch (nl)
* Norwegian (no)
* Pashto (ps)
* Portugese (pt)
* Quechua (qu)
* Romanian (ro)
* Russian (ru)
* Sakha (sah)
* Sicilian (scn)
* Sindhi (sd)
* Sassarese (sdc) (new)
* Seri (sei) (new)
* Tachelhit (shi)
* Slovak (sk)
* Serbian (Cyrillic) (sr-ec)
* Sundanese (su)
* Swedish (sv)
* Tamil (ta)
* Teluga (te)
* Tetun (tet) (new)
* Tajik (tg)
* Tagalog (tl) (new)
* Uyghur (ug)
* West Flemish (vls)
* Walloon (wa)
* Yiddish (yi)
* Cantonese (yue)
* Zhuang (za)
* Zealandic (zea)
* Old Chinese/Late Time Chinese (zh-classical)
* Chinese (Simplified) (zh-hans)